force-app/main/default/objects/Credit_Note__c/fields/ADF_Balance__c.field-meta.xml
<CustomField>
    <fullName>ADF_Balance__c</fullName>
    <formula>Booking__r.ADF_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADF Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>