force-app/main/default/objects/Credit_Note__c/fields/ADF_Final_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>ADF_Final_Approval_Date__c</fullName>
    <label>ADF Final Approval Date</label>
    <type>Date</type>
</CustomField>