force-app/main/default/objects/Credit_Note__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by TL</fullName>
            </value>
            <value>
                <fullName>Approved by CRM Accounts Head</fullName>
            </value>
            <value>
                <fullName>Approved by CRM Head</fullName>
            </value>
            <value>
                <fullName>Approved by CEO</fullName>
            </value>
            <value>
                <fullName>Rejected by TL</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Accounts Head</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Head</fullName>
            </value>
            <value>
                <fullName>Rejected by CEO</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>