force-app/main/default/objects/Credit_Note__c/fields/CRM_Accounts_Head__c.field-meta.xml
<CustomField>
    <fullName>CRM_Accounts_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Accounts Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>