force-app/main/default/objects/Credit_Note__c/fields/Interest_Amounts_Payable1__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amounts_Payable1__c</fullName>
    <label>Interest Amounts Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>