force-app/main/default/objects/Credit_Note__c/fields/Interest_Amounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amounts_Payable__c</fullName>
    <formula>Booking__r.ADF_Interest_Amount_Payable1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADF Interest Amounts Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>