force-app/main/default/objects/Credit_Note__c/fields/Interest_To_Be_Settled__c.field-meta.xml
<CustomField>
    <fullName>Interest_To_Be_Settled__c</fullName>
    <label>Interest To Be Settled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>