force-app/main/default/objects/Credit_Note__c/fields/Payment_Done__c.field-meta.xml
<CustomField>
    <fullName>Payment_Done__c</fullName>
    <label>% Payment Done</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>