force-app/main/default/objects/Credit_Note__c/fields/Paymet_Due__c.field-meta.xml
<CustomField>
    <fullName>Paymet_Due__c</fullName>
    <label>% Paymet Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>