force-app/main/default/objects/Credit_Note__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>