force-app/main/default/objects/Credit_Note__c/fields/Total_AV_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_AV_Value__c</fullName>
    <formula>Booking__r.Allotment_Premium__c</formula>
    <label>Total AV Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>