force-app/main/default/objects/Credit_Note__c/fields/Total_Demand_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Demand_Paid__c</fullName>
    <formula>Booking__r.RW_Total_Demand_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Demand Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>