force-app/main/default/objects/Credit_Note__c/fields/Total_Demand_Raised_Principal__c.field-meta.xml
<CustomField>
    <fullName>Total_Demand_Raised_Principal__c</fullName>
    <formula>Booking__r.Total_Demand_Raised_Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Demand Raised Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>